# CMakeLists_Test

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/test01/: CMakeLists.txt  say.cpp  say.h
src/test02/: CMakeLists.txt  dosay.cpp  dosay.h
